<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/qricon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:id="@+id/QRlogo"
        />


    <Button
        android:id="@+id/scanQRM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/QRlogo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:textAllCaps="false"

        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button1"
        android:text="@string/scanQRM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scanQRM"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:textAllCaps="false"

        android:background="@drawable/button1"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/createQRM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/generate"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"

        android:background="@drawable/button1"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="@string/camerap"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/camera"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"

        android:background="@drawable/button1"
        android:text="@string/language"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</RelativeLayout>